# Global-Food-Shock-Analysis

./: ALLFED.mplstyle  README.md  pyproject.toml  pyproject.toml.save  pyproject.toml.save.1  requirements.txt
data/: .~lock.food-twentieth-century-crop-statistics-1900-2017-xlsx.xlsx#
scripts/: analysis_global_food_shocks.ipynb  analysis_global_food_shocks.py  analysis_script.py
src/: global_food_shocks.py
src/global_food_shocks/: __init__.py  global_food_shocks.py
tests/: tests_global_food_shocks.py
