[tool.poetry]
name = "global_food_shocks"
version = "0.1.0"
description = "This project analyzes global yield decrease."
authors = ["Nadine Spychala"]
license = "Apache License Version 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.8,<3.12"
asttokens = "2.4.0"
attrs = "23.1.0"
backcall = "0.2.0"
certifi = "2023.7.22"
click = "8.1.7"
click-plugins = "1.1.1"
cligj = "0.7.2"
comm = "0.1.4"
contourpy = "1.1.0"
cycler = "0.11.0"
cython = "3.0.2"
debugpy = "1.6.7.post1"
decorator = "5.1.1"
et-xmlfile = "1.1.0"
executing = "1.2.0"
fiona = "1.9.4.post1"
geopandas = "0.13.2"
importlib-metadata = "6.8.0"
importlib-resources = "6.0.1"
ipykernel = "6.25.2"
ipython = "8.12.2"
jedi = "0.19.0"
joblib = "1.3.2"
joypy = "0.2.6"
jupyter-client = "8.3.1"
jupyter-core = "5.3.1"
kiwisolver = "1.4.5"
matplotlib = "3.7.2"
matplotlib-inline = "0.1.6"
nest-asyncio = "1.5.7"
numpy = "1.24.4"
openpyxl = "3.1.2"
packaging = "23.1"
pandas = "2.0.3"
parso = "0.8.3"
patsy = "0.5.3"
pexpect = "4.8.0"
pickleshare = "0.7.5"
pillow = "10.0.0"
platformdirs = "3.10.0"
pmdarima = "2.0.3"
prompt-toolkit = "3.0.39"
psutil = "5.9.5"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
pygments = "2.16.1"
pyparsing = "3.0.9"
pyproj = "3.5.0"
python-dateutil = "2.8.2"
pytz = "2023.3.post1"
pyzmq = "25.1.1"
scikit-learn = "1.3.0"
scipy = "1.10.1"
seaborn = "0.12.2"
shapely = "2.0.1"
six = "1.16.0"
stack-data = "0.6.2"
statsmodels = "0.14.0"
threadpoolctl = "3.2.0"
tornado = "6.3.3"
traitlets = "5.9.0"
typing-extensions = "4.7.1"
tzdata = "2023.3"
urllib3 = "2.0.4"
wcwidth = "0.2.6"
zipp = "3.16.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
